mTls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-auth
  namespace: stage
spec:
  mtls:
    mode: DISABLE
