stage-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: stage
  labels:
    name: stage
    version: v1
    istio-injection: enabled
