app-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
  namespace: stage
spec:
  hosts:
  - "chenna.com"
  gateways:
  - istio-ingress-gateway
  http:
  - name: virtual-service-routes
    route:
    - destination:
        host: api-service.stage.svc.cluster.local
        subset: api-service-subset

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-dr
  namespace: stage
spec:
  host: api-service.stage.svc.cluster.local
  subsets:
  - name: api-service-subset
    labels:
      app: api
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
